[package]
name = "server"
version = "0.1.0"
publish = true
authors = ["Konstantin Antonov <knstantna@gmail.com>"] 
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tracing-tracy = { version = "0.10.1" }
tracing-log = "0.1.3"
tracing-error = { version = "0.2.0" }

url = "2.2.2"
clap = { version = "4.0.27", features = ["derive"] }

